# skills-store

./: .gitignore  LICENSE  README.md  biome.json  components.json  index.html  lefthook.yml  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  skills.rs
src/app/: App.tsx  main.tsx
src/features/skills/: SkillsManager.tsx  useSkillsStore.ts
src/shared/api/: skills.ts
src/shared/ui/: button.tsx  checkbox.tsx  switch.tsx
