[package]
name = "skills-store"
version = "0.1.0"
description = "skills-store desktop app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "skills_store_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "6"

[features]
# By default Tauri runs in production mode. `tauri dev` enables this.
custom-protocol = ["tauri/custom-protocol"]
